Fix sound manager integration and complete game functionality

--- a/index.html
+++ b/index.html
@@ -788,6 +788,7 @@
   <!-- Game Scripts -->
   <script src="firebase-config.js"></script>
   <script src="social.js"></script>
+  <script src="sounds.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
